# semanticlens

./: README.md  changelog.html  contributing.html  genindex.html  index.html  installation.html  license.html  modules.html  objects.inv  prototyping_map1.ipynb  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  semanticlens.component_visualization.html  semanticlens.foundation_models.html  semanticlens.html  semanticlens.utils.html  tutorials.html
_modules/: index.html
_modules/semanticlens/: lens.html  scores.html
_modules/semanticlens/component_visualization/: activation_based.html  base.html  (+3 more)
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  tutorials.rst.txt
_sources/api/: component_visualization.rst.txt  foundation_models.rst.txt  lens.rst.txt  scores.rst.txt  utils.rst.txt
_sources/user_guide/: component_visualization.rst.txt
api/: component_visualization.html  foundation_models.html  lens.html  scores.html  utils.html
docs/source/: conf.py
semanticlens/: __init__.py  _concept_tensor.py  cache_setup.py  lens.py  log_setup.py  scores.py  test.py
semanticlens/component_visualization/: activation_based.py  activation_caching.py  base.py  relevance_based.py
semanticlens/foundation_models/: __init__.py  base.py  clip.py
semanticlens/utils/: __init__.py  activation_caching.py  render.py
tests/component_visualization/: test_activation_caching.py  test_activation_visualizer.py  test_relevance_based.py  test_relevance_visualizer.py
tutorials/: quickstart.ipynb
user_guide/: component_visualization.html
(+5 files in other folders)
